# Cold

./: .gitignore  LICENSE  MANIFEST.in  README.md  init.py  main.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
cold/: __init__.py  __main__.py  main.py  utils.py
cold/android/: start_button.py
cold/android/initial_setup/: init_entry.py
cold/android/initial_setup/basic_setup/: basic_setup_menu.py
cold/android/initial_setup/basic_setup/color_scheme/: color_categories.py  color_details.py  color_menu.py  color_picker.py  restore_defaults.py
cold/android/initial_setup/health_check/: health_check_menu.py
cold/android/initial_setup/system_settings/: system_settings_menu.py
cold/android/initial_setup/tutorial/: tutorial_menu.py
cold/core/: settings.py
cold/error_report/: report.py
cold/settings/: color.py  health_check.py  language.py  system.py  tutorial.py
cold/startup/: device_selection.py  launch.py  start_menu.py
cold/tools/: color_tools.py  input_tools.py
cold/utils/clear/: clear.py
cold/utils/leave/: leave.py
