[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cold"
version = "0.1.0"
description = "Cold 系統專案"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cold Root", email = "dedicateroot@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.31.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
